# cutout

./: README.rst  requirements.txt  setup.cfg
cutout/: dataset.py  main.py  model.py
