[metadata]
name = cutout
author = Benjamin Kiessling
author-email = mittagessen@l.unchti.me
summary = fuzzy cutout detection in manuscripts
description-file = README.rst
license = Apache
classifier =
    Development Status :: 1 - Alpha
        Environment :: Console
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6


[bdist_wheel]
universal = 1

[files]
packages = cutout

[entry_points]
console_scripts =
    cutout = cutout.main:cli

